--- a/templates/index.html
+++ b/templates/index.html
@@ -103,6 +103,7 @@
     </div>
 
     <!-- SCRIPTS -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
     <script src="/static/js/main.js"></script>
     <script src="/static/js/anfitriona.js"></script>
     <script src="/static/js/lider.js"></script>
